welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:15: error: ';' expected but ')' found.
	}while(x !=2 && !estFaceMur()))
                                      ^